Add footer and illustration to folder

--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
         crossorigin="anonymous"></script>
 
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #FCD44D;">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -75,8 +75,8 @@
         </div>
         <!-- <div class="item-video"><a class="owl-video"
                 href="stock-footage-brunette-woman-swimming-underwater-in-slow-motion.mp4"></a></div> -->
-        <div class="item-video"><a class="owl-video"
-                href="stock-footage-two-asian-boys-racing-with-their-father-in-a-pool.mp4"></a></div>
+        <!-- <div class="item-video"><a class="owl-video"
+                href="stock-footage-two-asian-boys-racing-with-their-father-in-a-pool.mp4"></a></div> -->
     </div>
 
     <!-- From this, we will use container -->
@@ -128,8 +128,9 @@
             </div>
         </div>
     </div>
+
+    <!-- News -->
     <div class="container">
-        <!-- News -->
         <div class="row">
             <h1>News</h1>
 
@@ -162,6 +163,171 @@
         </div>
     </div>
 
+    <!-- Footer -->
+    <div class="footer-container">
+        <div class="container">
+            <div class="row row-cols-4">
+                <!-- Column 1 -->
+                <div class="col">
+                    <div class="row">
+                        <p>45 Tanjung Rhu Rod</p>
+                    </div>
+                    <div class="row">
+                        <p>Singapore 436899</p>
+                    </div>
+                    <div class="row"></div>
+                    <div class="row"></div>
+                </div>
+                <!-- Column 2 -->
+                <div class="col">
+                    <div class="row">
+                        <p>Home</p>
+                    </div>
+                    <div class="row"></div>
+                    <div class="row">
+                        <p>About Us</p>
+                    </div>
+                    <div class="row">
+                        <p>Brief History</p>
+                    </div>
+                    <div class="row">
+                        <p></p>
+                    </div>
+                    <div class="row">
+                        <p></p>
+                    </div>
+                    <div class="row">
+                        <p></p>
+                    </div>
+                    <div class="row">
+                        <p></p>
+                    </div>
+                    <div class="row">
+                    </div>
+                    <div class="row">
+                    </div>
+                    <div class="row">
+                        <p></p>
+                    </div>
+                    <div class="row">
+                    </div>
+                    <div class="row">
+                    </div>
+                    <div class="row">
+                        <p>Facilities</p>
+                    </div>
+                    <div class="row">
+                        <p>Sport</p>
+                    </div>
+                    <div class="row">
+                        <p>General</p>
+                    </div>
+                </div>
+                <!-- Column 3 -->
+                <div class="col">
+                    <div class="row">
+                        <p>Membership</p>
+                    </div>
+                    <div class="row">
+                        <p>Membership Scheme</p>
+                    </div>
+                    <div class="row">
+                        <p>Reciprocal Scheme</p>
+                    </div>
+                    <div class="row">
+                        <p>Golfing Membership</p>
+                    </div>
+                    <div class="row">
+                        <p>Transfer Procedure & FAQ</p>
+                    </div>
+                    <div class="row">
+                        <p>Find Out More</p>
+                    </div>
+                    <div class="row">
+                    </div>
+                    <div class="row">
+                        <p>Banquet</p>
+                    </div>
+                    <div class="row">
+                    </div>
+                    <div class="row">
+                        <p>Photo Gallery</p>
+                    </div>
+                    <div class="row">
+                        <p>Sport</p>
+                    </div>
+                    <div class="row">
+                        <p>Swimming</p>
+                    </div>
+                    <div class="row">
+                        <p>Social</p>
+                    </div>
+                </div>
+                <!-- Column 4 -->
+                <div class="col">
+                    <div class="row">
+                        <p>Wine And Dine</p>
+                    </div>
+                    <div class="row">
+                        <p>Jakson Miller</p>
+                    </div>
+                    <div class="row">
+                        <p>The Palms</p>
+                    </div>
+                    <div class="row">
+                        <p>Jade Phoenix</p>
+                    </div>
+                    <div class="row">
+                        <p>Cabana</p>
+                    </div>
+                    <div class="row">
+                        <p>Le Petit Tressor</p>
+                    </div>
+                    <div class="row">
+                        <p>The Delicatesen</p>
+                    </div>
+                    <div class="row">
+                        <p>Fountain Bar</p>
+                    </div>
+                    <div class="row">
+                        <p>D'Tanjong</p>
+                    </div>
+                    <div class="row">
+                        <p>D'Sports</p>
+                    </div>
+                    <div class="row">
+                        <p>D'Galaxy</p>
+                    </div>
+                    <div class="row">
+                        <p>Straits of Malacca</p>
+                    </div>
+                    <div class="row">
+                    </div>
+                    <div class="row">
+                        <p>What's New</p>
+                    </div>
+                    <div class="row">
+                        <p>Sport</p>
+                    </div>
+                    <div class="row">
+                        <p>Swimming</p>
+                    </div>
+                    <div class="row">
+                        <p>Social</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer 2 -->
+    <div class="footer-container-2">
+        <div class="container">
+            <div class="row">
+                <span>&#169;Copyright 2015. Singapore Swimming Club. All Rights Reserved</span>
+            </div>
+        </div>
+    </div>
 
     <script>
         $('.owl-carousel').owlCarousel({
