--- a/home.html
+++ b/home.html
@@ -68,15 +68,21 @@
     <!-- OwlCarousel2 -->
     <div class="owl-carousel owl-theme">
         <div class="item">
-            <img src="home-1.png" class="d-block w-100" alt="...">
+            <img src="home-1.png" alt="">
         </div>
         <div class="item">
-            <img src="home-2.png" class="d-block w-100" alt="...">
+            <div class="item-video" data-merge="1"><a class="owl-video"
+                    href="https://www.youtube.com/watch?v=JpxsRwnRwCQ"></a></div>
         </div>
-        <!-- <div class="item-video"><a class="owl-video"
-                href="stock-footage-brunette-woman-swimming-underwater-in-slow-motion.mp4"></a></div> -->
-        <!-- <div class="item-video"><a class="owl-video"
-                href="stock-footage-two-asian-boys-racing-with-their-father-in-a-pool.mp4"></a></div> -->
+        <div class="item">
+            <img src="home-2.png" alt="">
+        </div>
+        <!-- <div class="item">
+            <div class="item-video" data-merge="1"><a class="owl-video" href="stock-footage-brunette-woman-swimming-underwater-in-slow-motion.mp4"></a></div>
+        </div>
+        <div class="item">
+            <div class="item-video" data-merge="1"><a class="owl-video" href="stock-footage-two-asian-boys-racing-with-their-father-in-a-pool.mp4"></a></div>
+        </div> -->
     </div>
 
     <!-- From this, we will use container -->
@@ -249,33 +255,84 @@
     </div>
 
     <!-- News -->
-    <div class="container">
+    <div class="container news-container">
         <div class="row">
             <h1>News</h1>
 
-            <div class="row row-cols-md-6">
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of
-                            the
-                            card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+            <div class="row">
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
+                                the
+                                card's content.</p>
+                            <a href="#" class="card-link">Card link</a>
+                            <a href="#" class="card-link">Another link</a>
+                        </div>
                     </div>
                 </div>
-                <div class="card" style="width: 18rem;">
-                    <div class="card-body">
-                        <h5 class="card-title">Card title</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk
-                            of
-                            the
-                            card's content.</p>
-                        <a href="#" class="card-link">Card link</a>
-                        <a href="#" class="card-link">Another link</a>
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of
+                                the
+                                card's content.</p>
+                            <a href="#" class="card-link">Card link</a>
+                            <a href="#" class="card-link">Another link</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            Read More
+                        </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="row">
+                            <div class="col">
+                                <div class="card" style="width: 18rem;">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk
+                                            of
+                                            the
+                                            card's content.</p>
+                                        <a href="#" class="card-link">Card link</a>
+                                        <a href="#" class="card-link">Another link</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card" style="width: 18rem;">
+                                    <div class="card-body">
+                                        <h5 class="card-title">Card title</h5>
+                                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                                        <p class="card-text">Some quick example text to build on the card title and make
+                                            up the bulk
+                                            of
+                                            the
+                                            card's content.</p>
+                                        <a href="#" class="card-link">Card link</a>
+                                        <a href="#" class="card-link">Another link</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -311,7 +368,7 @@
                         <form>
                             <div class="mb-3">
                                 <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Email Address">
+                                    placeholder="Email Address">
                             </div>
                             <button type="submit" class="btn btn-primary">SUBSCRIBE</button>
                         </form>
@@ -462,24 +519,33 @@
     </div>
 
     <script>
-        $('.owl-carousel').owlCarousel({
-            items: 1,
-            merge: true,
-            loop: true,
-            margin: 10,
-            video: true,
-            lazyLoad: true,
-            center: true,
-            responsive: {
-                480: {
-                    items: 2
-                },
-                600: {
-                    items: 4
+        $(document).ready(function () {
+            $('.owl-carousel').owlCarousel({
+                rtl: true,
+                loop: true,
+                items: 1,
+                margin: 10,
+                autoHeight: true,
+                nav: true,
+                video: true,
+                center: true,
+                lazyLoad: true,
+                merge: true,
+                responsive: {
+                    0: {
+                        items: 1
+                    },
+                    600: {
+                        items: 3
+                    },
+                    1000: {
+                        items: 5
+                    }
                 }
-            }
-        })
+            });
+        });
     </script>
+
 </body>
 
 
